-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.53 2007-08-22 00:15:30 guru Exp $
-----------------------------------------------------------------------------------------

2007-08-21	pwessel
	* gmt_io.c:		Combinations of OUTPUT_DEGREE_FORMAT=ddd:mm:ss.xxxF and -:
				would add W|E to lat and S|N to lon for formatted output
	* mapproject.c		For UTM projections with -C, the -R is now optional.  If not set
				then UTM zone specification must have some latitude info in it.
				If a unique zone is specified then -R is set accordingly.
	* gmt_init.c		Now, UTM zones may be A,B,Y,Z or 1-60 with modifiers C-X
				(except I and O).  
	
2007-08-12	pwessel
	* grdcut.c:		Domain check failed for geographic 360-degree grid w/ -fg

.
2007-08-08	pwessel
	* grdfilter.c:		-I<nx>+/<ny>+ not propagated to output setup
.
2007-08-01	pwessel
	* gmt_support.c:	ddd:mm.xx (2 or more x) failed.
	
2007-07-31	pwessel
	* psxy.c:		-E.../[-|+]<pen> where + means apply cpt color (-C) to symbol & bar
					- means apply to bar only (no fill).  Likewise, -W[+|-]<pen> controls
					if -C sets outline (-) or both fill and outline (+)
	* psxyz.c		-W[+|-]<pen> controls if -C sets outline (-) or both fill and outline (+)
	
2007-07-30	pwessel
	* psxy.c:		For -Sb|B, clip bars extending outside -R (unless -N is on)
	* psxyz.c		Same
	* misc/gmtdigitize.c:	Must use separate x- and y-scales if -Jx is specified
	
2007-07-18	remko
	* meca/utilmeca.c:	Make sure that checks on floating point numbers work well, even
				in case of small round off errors. Thanks to Peter Lombard.

2007-07-17	pwessel
	* grdedit.c:		Disallow -T for Surfer grids since they don't support two
				kinds of registration.
				
2007-07-16	pwessel
	* grd2xyz.c:		Bug fix (Windows only): Did not switch to binary mode when
				-Z specified binary output.
2007-07-11	remko
	* grd2cpt.c:		Bug fix: -E flag did not work unless -T was used.